--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ body {
 
 /* ----------------MEDIA QUERIES----------------------- */
 
-/* -----TABLEST----------------- */
+/* -----TABLET SCREENS----------------- */
 
 @media (max-width:850px) {
 
@@ -218,7 +218,7 @@ body {
         font-size: 0.9rem;
     }
 
-    /* -------MOBILES--------------------- */
+    /* -------MOBILE SCREENS--------------------- */
 
 }
 
