--- a/css/styles.css
+++ b/css/styles.css
@@ -225,9 +225,20 @@ body {
         font-size: 0.8rem;
     }
 
+
+    .header-title {
+        font-size: 1.5rem
+    }
+
+    .hero-title,
+    .footer-title {
+        font-size: 1.3rem
+    }
+
+
+
     .footer-links {
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: flex-start;
 
@@ -236,6 +247,7 @@ body {
 
     .btn {
         margin: 0;
+        font-size: 0.7rem;
     }
 
 
