--- a/css/styles.css
+++ b/css/styles.css
@@ -1,58 +1,4 @@
-/* --------------CSS RESET------------------------------ */
-
-/* 1. Use a more-intuitive box-sizing model */
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-/* 2. Remove default margin */
-* {
-    margin: 0;
-}
-
-
-/* 5. Improve media defaults */
-img,
-picture,
-video,
-canvas,
-svg {
-    display: block;
-    max-width: 100%;
-}
-
-/* 6. Inherit fonts for form controls */
-input,
-button,
-textarea,
-select {
-    font: inherit;
-}
-
-/* 7. Avoid text overflows */
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    overflow-wrap: break-word;
-}
-
-/* 8. Improve line wrapping */
-p {
-    text-wrap: pretty;
-}
-
-/* 9. Removing text decoration from links  */
-a {
-    text-decoration: none;
-}
-
-
+/* -----------------CSS STYLES------------------------------ */
 :root {
     --clr-primary-blue: #514A9D;
     --clr-secondary-blue: #24C6DC;
@@ -188,68 +134,18 @@ body {
 .dark-btn:hover,
 .dark-btn:focus {
     background-color: inherit;
-    border: 2px solid #ef5839;
+    outline: 2px solid #ef5839;
 
 }
 
 .light-btn:hover,
 .light-btn:focus {
     color: var(--clr-primary-orange);
-    border: 2px solid var(--clr-neutral-grey);
+    outline: 2px solid var(--clr-neutral-grey);
     background-color: inherit;
 }
 
 .light-btn {
     background-color: var(--clr-neutral-grey);
     color: var(--clr-primary-orange);
-}
-
-
-/* ----------------MEDIA QUERIES----------------------- */
-
-/* -----TABLET SCREENS----------------- */
-
-@media (max-width:850px) {
-
-    body {
-        font-size: 0.9rem;
-    }
-
-    /* -------MOBILE SCREENS--------------------- */
-
-}
-
-@media (max-width:550px) {
-
-    body {
-        font-size: 0.8rem;
-    }
-
-
-    .header-title {
-        font-size: 1.5rem
-    }
-
-    .hero-title,
-    .footer-title {
-        font-size: 1.3rem
-    }
-
-
-
-    .footer-links {
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-
-        gap: 0.5rem
-    }
-
-    .btn {
-        margin: 0;
-        font-size: 0.7rem;
-    }
-
-
-
 }
